pom: dependency rollback and new aucom version